<resources>
    <string name="app_name">Kitsunebi</string>
    <string name="action_settings">Settings</string>
    <string name="config_preference">config_preference</string>
    <string name="notification_channel_id">notification_channel_id</string>
    <string name="vpn_is_running">vpn_is_running</string>
    <string name="is_enable_proxy_logging">is_enable_proxy_logging</string>
    <string name="local_dns">local_dns</string>
    <string name="is_hide_dns_logs">is_hide_dns_logs</string>
    <string name="is_enable_per_app_vpn">is_enable_per_app_vpn</string>
    <string name="per_app_mode">per_app_mode</string>
    <string name="per_app_allowed_app_list">per_app_allowed_app_list</string>
    <string name="per_app_disallowed_app_list">per_app_disallowed_app_list</string>
    <string name="allowed_list">Allowed list</string>
    <string name="disallowed_list">Disallowed list</string>
    <string name="export_list">Export</string>
    <string name="import_list">Import</string>
    <string name="sniffing">sniffing</string>
    <string name="inbound_tag">inbound_tag</string>
    <string name="version">version</string>

    <string name="title_application">Application</string>
    <string name="title_advanced">Advanced</string>
    <string name="title_about">About</string>
    <string name="title_pref_version">Version</string>
    <string name="title_pref_proxy_only">Proxy-only mode</string>
    <string name="summary_pref_proxy_only">if not load to VPN service</string>
    <string name="title_pref_parse_domain_next_enabled">resolve domain on next</string>
    <string name="summary_pref_parse_domain_next_enabled">re-resolve prepared domain on next start</string>
    <string name="title_pref_fake_dns">use Fake DNS</string>
    <string name="summary_pref_fake_dns">choose one of v2ray trafficSniffing or this Fake DNS</string>
    <string name="title_pref_log_level">Log Level</string>
    <string name="summary_pref_log_level">use logcat to check logs</string>
</resources>